--- a/SuppliesPriceLister.csproj
+++ b/SuppliesPriceLister.csproj
@@ -23,4 +23,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Linq.Async" Version="4.1.1" />
+  </ItemGroup>
+
 </Project>
