--- a/SuppliesPriceLister.Tests/SuppliesPriceLister.Tests.csproj
+++ b/SuppliesPriceLister.Tests/SuppliesPriceLister.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\buildxact-at-home-coding-challenge\SuppliesPriceLister.csproj" />
+    <ProjectReference Include="..\SuppliesPriceLister\SuppliesPriceLister.csproj" />
   </ItemGroup>
 
 </Project>
